# tkursed

./: .flake8  .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py  tkursed.py
examples/: animation.py  blank.py  color_cycle.py  sprite_rendering.py  square.py
src/tkursed/: __init__.py  _consts.py  _image.py  _metrics.py  _render.py  _state.py  _tk.py
tests/: test_render.py  test_state.py  test_tk.py
